Learn and Earn mobile complete + fixes, hamburger and side coin/feature images overflow fix.

--- a/src/views/game/learnAndEarn/styles.module.css
+++ b/src/views/game/learnAndEarn/styles.module.css
@@ -1,5 +1,8 @@
 .base[data-selected-chest="false"] {
   min-height: 571.6px;
+  @media screen and (max-width: 576px) {
+    padding: 16px;
+  }
 }
 .base[data-selected-chest="false"][data-is-any-completed="true"] {
   @media screen and (max-width: 854px) {
@@ -7,13 +10,25 @@
   }
 }
 .base[data-selected-chest="true"] {
-  min-width: 669px;
   min-height: 676px;
   padding-top: 0.75rem;
+  @media screen and (min-width: 538px) {
+    min-width: 646px;
+  }
+  @media screen and (max-width: 675px) {
+    padding: 16px;
+  }
+  @media screen and (max-width: 537px) {
+    min-width: 355px;
+    min-height: 667px;
+    background-color: #1d0704;
+    border: 1px solid var(--pbrown);
+  }
 }
 
+/* For overflow part. */
 .base[data-selected-chest="true"] > img {
-  @media screen and (max-width: 669px) {
+  @media screen and (max-width: 840px) {
     display: none;
   }
 }
@@ -42,8 +57,8 @@ p.loading {
   margin-top: 0.8rem;
 }
 .learn[data-is-any-completed="true"] {
-  @media screen and (max-width: 560px) {
-    margin-bottom: 5rem;
+  @media screen and (max-width: 576px) {
+    margin-bottom: 4.5rem;
   }
 }
 
@@ -113,14 +128,18 @@ p.loading {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 632px;
-  height: 632px;
+  @media screen and (min-width: 538px) {
+    width: 632px;
+    height: 632px;
+  }
 }
 
 .questions .openedChest .content {
   --_green: #009846;
 
-  transform: translateY(-50px);
+  @media screen and (min-width: 538px) {
+    transform: translateY(-50px);
+  }
 }
 
 .questions .openedChest .content h2 {
@@ -246,7 +265,6 @@ p.loading {
 }
 .questions .openedChest .coinPopup .coin {
   left: 50%;
-  bottom: -124px;
   transform: translateX(-50%);
   width: 186px;
   height: 185px;
@@ -281,6 +299,76 @@ p.loading {
   transform: translateY(2px);
 }
 
+/* Mobile */
+@media screen and (max-width: 537px) {
+  p.loading {
+    text-shadow: 0 1px 1px var(--white);
+  }
+
+  .questions > :global(.backBtn) {
+    filter: drop-shadow(0 1px 1px var(--white));
+  }
+
+  .questions .openedChest .content h2.questionTxt {
+    flex-direction: column;
+    margin-inline: 0;
+  }
+  .questions .openedChest .content h2.questionTxt div:first-child {
+    font-size: 64px;
+  }
+  .questions .openedChest .content h2.questionTxt div:last-child {
+    font-size: 19px;
+    margin-top: 0;
+    margin-left: 0;
+  }
+
+  .questions .openedChest .content div[role=radiogroup] {
+    grid-auto-rows: 87px;
+    gap: 0;
+    padding-bottom: 132px;
+    margin-top: 1.5rem;
+  }
+  .questions .openedChest .content div[role=radiogroup] button[role=radio] {
+    animation: fadeIn ease-in-out 1.5s;
+  }
+  .questions .openedChest .content div[role=radiogroup] button[role=radio]:nth-child(2) {
+    grid-column: 2;
+    grid-row: 2;
+  }
+  .questions .openedChest .content div[role=radiogroup] button[role=radio]:nth-child(3) {
+    grid-row: 3;
+  }
+  .questions .openedChest .content div[role=radiogroup] img.mobileChest {
+    justify-self: flex-end;
+    grid-row: 3;
+    width: 140px;
+    height: 140px;
+    transform: translateY(80px);
+  }
+
+  .questions .openedChest .content div[role=radiogroup] .explanation {
+    position: absolute;
+    top: 0px;
+    transform: translateX(-50%);
+    width: 100%;
+  }
+
+  .questions .openedChest .coinPopup .coin {
+    animation-name: bonuceInMobile;
+  }
+
+  .questions .coinTotal {
+    right: 16px;
+    bottom: 16px;
+    width: 74px;
+    height: 74px;
+  }
+  .questions .coinTotal p {
+    font-size: 56px;
+    transform: translateY(2px);
+  }
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -300,6 +388,19 @@ p.loading {
   }
   100% {
     bottom: -124px;
+    opacity: 1;
+  }
+}
+@keyframes bonuceInMobile {
+  0% {
+    top: -160px;
+    opacity: 0.35;
+  }
+  20% {
+    top: -280px;
+  }
+  100% {
+    top: -260px;
     opacity: 1;
   }
 }
